--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux [RU]Tutorial</title>
+    <title>Menu items</title>
   </head>
   <body>
     <div id="root">
